Fixing image width issue on firefox

--- a/_sass/_formatting.scss
+++ b/_sass/_formatting.scss
@@ -62,7 +62,7 @@ a:visited {
 .image {
 	width: auto;
 	margin: auto;
-	display: table;
+	display: block;
 	text-align:center;
 	&:after {
 		content: '';
